# striking-robot-twin

./: .gitignore  .pre-commit-config.yaml  CLAUDE.md  README.md  pyproject.toml
.github/workflows/: ci.yml
models/: boxer_g1.xml  mocap_g1.xml  scene.xml
models/robot/: striker_arm.xml
models/trainee/: humanoid.xml
scripts/: fetch_g1.py  render_combo_g1.py  render_mocap.py  run_drill.py  run_sim.py  viewer.py
src/robot_twin/: __init__.py
src/robot_twin/config/: __init__.py  app_config.py
src/robot_twin/core/: __init__.py  geometry.py  result.py  types.py
src/robot_twin/domain/: __init__.py  combo.py  dodge_detector.py  guard.py  strike_planner.py  target_selector.py
src/robot_twin/hal/: __init__.py  interfaces.py  mujoco_plant.py  real_plant.py  sim_observer.py  sim_trainee.py
src/robot_twin/rl/: __init__.py  env.py  reward.py  train.py
src/robot_twin/safety/: __init__.py  arbiter.py  fault_injection.py
src/robot_twin/services/: __init__.py  curriculum.py  drill_engine.py  scoring.py  telemetry.py
src/robot_twin/video_mining/: __init__.py  combo_stats.py  pose_extract.py  strike_events.py
tests/: conftest.py  test_combo.py  test_curriculum.py  test_dodge_detector.py  test_drill_engine.py  test_drill_session.py  test_guard_detector.py  test_hal_contract.py  test_keepout.py  test_safety_arbiter.py  test_scoring.py  test_target_selector.py
