[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "robot-twin"
version = "0.0.0"
description = "Digital-twin-first control stack for a striking training robot (safety-first pHRI)."
requires-python = ">=3.11"
dependencies = [
    "numpy>=1.26",
    "pydantic>=2.5",
    "mujoco>=3.1",
    "gymnasium>=0.29",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
# Heavy or platform-specific extras kept out of the default install.
rl = ["stable-baselines3>=2.2"]
viz = ["rerun-sdk>=0.15"]
dev = ["pytest>=8.0"]

[tool.hatch.build.targets.wheel]
packages = ["src/robot_twin"]

[tool.pytest.ini_options]
# src layout: make robot_twin importable in tests without an editable install,
# so the safety suite runs even before any packaging step.
pythonpath = ["src"]
testpaths = ["tests"]
markers = [
    "mujoco: test requires the mujoco package and the MJCF models",
]
